@startuml


class Ex2_1{
+String[] createTextFiles(int n, int seed, int bound)
+int getNumOfLines(String[] fileNames)
+int getNumOfLinesThreads(String[] fileNames)
+int getNumOfLinesThreadPool(String[] fileNames)

}
class LineCounterCallable implements Callable{
-String file
+LineCounterCallable(String file)
+Integer call()
}
class LineCounterThread extends Thread{
-String file
-int numLines
+LineCounterThread(String file)
+void run()
+int getNumLines()
}
class Main{
+void cleanFinder(int fileNumber)
}
Interface Callable{
Integer call()
}
class Thread{
void run()
}

Main --> Ex2_1
Ex2_1 --> LineCounterCallable
Ex2_1 --> LineCounterThread

@enduml